# fido_ai_exercise

./: .gitignore  README.md  audio.db  main.py  pyproject.toml  test_process_audio.py  test_root.py
models/: audio_file_input.py  audio_session_input.py  exceptions.py
validator/: has_value.py  has_values.py
