[tool.poetry]
package-mode = false
description = "Exercise for FIDO AI interview"
authors = ["Opalevanescence <jessica.ashley.gray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.36"
typing-extensions = "^4.5.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.28.1"